# mssql_mcp_server

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_connection.py
src/mssql_mcp_server/: __init__.py  server.py
tests/: conftest.py  test_server.py
